changed configuration, added tests and fixed comments